PZS-NG CHANGELOG
----------------

v1.0.5  --> 1.0.X  :
		- fixed a bug in rescan --quick which did not detect if a previously checked
		  file was missing.
		- added support for speedtesting.
		- New option in zsconfig.h - speedtest_dirs - dirs dedicated to speedtesting.
		- New option in zsconfig.h - speedtest_delfile - keep or delete uploaded file.
		- added special mp3 progressmeter.
		- New option in zsconfig.h - progressmeter_mp3 - how mp3 progressmeter looks
		  like.
		- New option in zsconfig.h - del_progressmeter_mp3 - how mp3 del_progressmeter
		  looks like.
		- added option to chdir() before rescan.
		- New option in zsconfig.h - rescan_chdir_flags - flags needed by the user to
		  chdir() before rescanning a dir. Note: root (uid 0) is always allowed.
		- added support for sfv_lenient.
		- New option in zsconfig.h - sfv_lenient - see certain delimeter chars as the same
		- added support for missing-sfv.
		- New option in zsconfig.h - create_missing_sfv_link - check for missing sfv.
		- New option in zsconfig.h - incomplete_base_sfv_indicator - missing-indicator.
		- New option in zsconfig.h - incomplete_sfv_indicator - missing-indicator.
		- sort by group fixed - but GRPNaME and grpNAME in the same dir. Groupname from
		  the first release sets the default.
v1.0.4  --> 1.0.5  : (2170)
		- additions/fixes in meij's plugins.
		- added cr0que's mod to move detection of VA mp3 artist to audiosort.c.
		- added cr0que's fix for a bug regarding mp3 releases with subdirs, and how the
		  the symlinks got puckered.
		- added meij's plugin-rewrite of psxc-imdb.tcl with support for directed imdb
		  lookups (previously only the "main" channel(s) would get the result).
		- fixed the malloc()/free() bug introduced with v1.0.3 completely.
		- fixed lastbind problem in GameFAQ and TVRage plugins with encrypted sitechans.
v1.0.3  --> 1.0.4  : (r2149)
		- fixed a malloc()/free() bug introduced with v1.0.3 that made the zs segfault.